2010-07-05  Yuzo Fujishima  <yuzo@google.com>

Reviewed by Dan Bernstein.

        Fix for Bug 41509 - Ranges for @font-face unicode-range must be separated by commas
        https://bugs.webkit.org/show_bug.cgi?id=41509

        * fast/css/beforeSelectorOnCodeElement.html:
          Fixed the space-separated ranges.
        * fast/css/font-face-multiple-ranges-for-unicode-range-expected.txt: Added.
        * fast/css/font-face-multiple-ranges-for-unicode-range.html: Added.
        * fast/css/text-security.html:
          Fixed the space-separated ranges.
        * fast/events/updateLayoutForHitTest.html:
          Fixed the space-separated ranges.
        * fast/text/capitalize-boundaries.html:
          Fixed the space-separated ranges.
        * platform/win/css2.1/resources/Mac-compatible-font-fallback.css:
        (@font-face):
          Fixed the space-separated ranges.
2010-07-05  Yuzo Fujishima  <yuzo@google.com>

        Reviewed by Dan Bernstein.

        Fix for Bug 41509 - Ranges for @font-face unicode-range must be separated by commas
        https://bugs.webkit.org/show_bug.cgi?id=41509

        Test: fast/css/font-face-multiple-ranges-for-unicode-range.html

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseFontFaceUnicodeRange):

Canonical link: https://commits.webkit.org/53445@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62530 268f45cc-cd09-0410-ab3c-d52691b4dbfc